@@ -4,14 +4,13 @@ import { errorMsg } from '#util/dialog';
 import { uniq, debounce } from 'lodash';
 import { observable } from 'mobx';
 
-const scriptPaths = uniq([
-    dirname(process.execPath),
-    process.cwd(),
-]).map(path => join(path, 'scripts'));
+const scriptPaths = uniq([dirname(process.execPath), process.cwd()]).map(
+    (path) => join(path, 'scripts'),
+);
 
-const scriptDir = scriptPaths.find(path => (
-    fs.existsSync(path) && fs.lstatSync(path).isDirectory()
-));
+const scriptDir = scriptPaths.find(
+    (path) => fs.existsSync(path) && fs.lstatSync(path).isDirectory(),
+);
 
 const scripts = observable([]);
 
@@ -19,19 +18,26 @@ const { readdir } = fs.promises;
 
 async function loadScripts() {
     try {
-        const list = await readdir(scriptDir);
-        scripts.replace(list.map(filename => ({
-            value: filename,
-            label: parse(filename).name,
-        })));
+        const list = (await readdir(scriptDir)).filter((filename) =>
+            filename.endsWith('.js'),
+        );
+        scripts.replace(
+            list.map((filename) => ({
+                value: filename,
+                label: parse(filename).name,
+            })),
+        );
     } catch (e) {
         console.error(e);
     }
 }
 
 if (!scriptDir) {
-    errorMsg(`Script Error`, `Could not find 'scripts' directory for mapping definition files
-Searched in;\n\t${scriptPaths.join('\n\t')}`);
+    errorMsg(
+        `Script Error`,
+        `Could not find 'scripts' directory for mapping definition files
+Searched in;\n\t${scriptPaths.join('\n\t')}`,
+    );
 } else {
     loadScripts();
     fs.watch(scriptDir, debounce(loadScripts, 100));
@@ -41,7 +47,4 @@ function loadScript(file) {
     return fs.readFileSync(join(scriptDir, file), 'utf8');
 }
 
-export {
-    scripts,
-    loadScript,
-};
+export { scripts, loadScript, scriptDir };
