@@ -1,5 +1,5 @@
 export { scripts } from './file';
-export { parseASM } from './parse-asm';
+export { parseASMBasic } from './parse-asm';
 export { writeBIN } from './write-bin';
 export { writeASM } from './write-asm';
 export { default as runScript } from './run-script';
