@@ -20,7 +20,8 @@ const sizes = {
     l: 4,
 };
 
-export function parseASM(text) {
+// use with asm(({ basic }) => basic())
+export function parseASMBasic(text) {
     const comment = regex(/^;.*$/m).map(() => [ignore]);
     const even = str('even').map(() => [ignore]);
     const label = regex(/^[A-Z0-9_@$.]+(\s+)?:/i).map(t => [lbl, t.replace(':', '')]);
